force-app/main/default/objects/Opportunity/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <description>Created for Kevin; to be used in reports, especially conversion reports to syn with Jonathan&apos;s enrollment report.</description>
    <formula>text(Account.AccountSource)</formula>
    <label>Account Source</label>
    <type>Text</type>
</CustomField>