force-app/main/default/objects/Opportunity/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <formula>Contact__r.mkto71_Acquisition_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>