force-app/main/default/objects/Opportunity/fields/Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Program__c</fullName>
    <formula>Contact__r.mkto71_Acquisition_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Program</label>
    <type>Text</type>
</CustomField>