force-app/main/default/objects/Opportunity/fields/Additional_20_Years__c.field-meta.xml
<CustomField>
    <fullName>Additional_20_Years__c</fullName>
    <label>Additional 20 Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Additional_20_years</valueSetName>
    </valueSet>
</CustomField>