force-app/main/default/objects/Opportunity/fields/Additional_Amount_on_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_on_First_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Customers may choose to add an additional amount to the first payment of a multi-payment plan.  Customizable in the Order Builder.</description>
    <label>Additional Amount on First Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>