force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>if ( IsClosed = false, Today() -  DATEVALUE(CreatedDate) ,  CloseDate - DATEVALUE(CreatedDate))</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>