force-app/main/default/objects/Opportunity/fields/Aircall_Dials__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Dials__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Count of all Tasks/Activities on this opportunity that are complete, and are Outbound. Rollup using DLRS - Dial_Counts_For_Opportunity.</inlineHelpText>
    <label>Outbound Dials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>