force-app/main/default/objects/Opportunity/fields/Alt_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alt_Email_Address__c</fullName>
    <label>Alt Email Address</label>
    <type>Email</type>
</CustomField>