force-app/main/default/objects/Opportunity/fields/Alt_Shipping_Optional_Field__c.field-meta.xml
<CustomField>
    <fullName>Alt_Shipping_Optional_Field__c</fullName>
    <label>Alt Shipping Optional Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>