force-app/main/default/objects/Opportunity/fields/Americord_Metadata_Tag__c.field-meta.xml
<CustomField>
    <fullName>Americord_Metadata_Tag__c</fullName>
    <description>This field can be used to tag records for filtering or other users.</description>
    <label>Americord Metadata Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>