force-app/main/default/objects/Opportunity/fields/Annual_Payment_Plan_Exception__c.field-meta.xml
<CustomField>
    <fullName>Annual_Payment_Plan_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by admins to allow ASP to have a payment plan other than Annual Fee.</description>
    <label>Annual Payment Plan Exception</label>
    <type>Checkbox</type>
</CustomField>