force-app/main/default/objects/Opportunity/fields/Appointment_Date_Time_ET__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time_ET__c</fullName>
    <description>Populated by Process Builder when Appointment is set. Used to update stage when Appointment is missed.</description>
    <label>Appointment Date &amp; Time (ET)</label>
    <type>DateTime</type>
</CustomField>