force-app/main/default/objects/Opportunity/fields/Appointment_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_Zone__c</fullName>
    <label>Appointment Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>