force-app/main/default/objects/Opportunity/fields/ASP_20_years__c.field-meta.xml
<CustomField>
    <fullName>ASP_20_years__c</fullName>
    <formula>ASP__c +  Sum_of_Products__c - Sales_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost for 20 years with Annual Storage</inlineHelpText>
    <label>ASP (20 years) OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>