force-app/main/default/objects/Opportunity/fields/Asset_Content_FT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_FT__c</fullName>
    <formula>Contact__r.Asset_Content_FT__c</formula>
    <label>Asset / Content (FT)</label>
    <type>Text</type>
</CustomField>