force-app/main/default/objects/Opportunity/fields/Asset_Content_LT__c.field-meta.xml
<CustomField>
    <fullName>Asset_Content_LT__c</fullName>
    <formula>Contact__r.Asset_Content_LT__c</formula>
    <label>Asset / Content (LT)</label>
    <type>Text</type>
</CustomField>