force-app/main/default/objects/Opportunity/fields/Authority_is_client_the_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Authority_is_client_the_decision_maker__c</fullName>
    <inlineHelpText>1 is no and 5 is yes, in between is an indication that they share the authority with one or more people.</inlineHelpText>
    <label>AUTHORITY: Is client the decision-maker?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>