force-app/main/default/objects/Opportunity/fields/Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorization_ID__c</fullName>
    <label>Authorization ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>