force-app/main/default/objects/Opportunity/fields/Authorized_Payment__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated by Process Builder, when Authorization is successful.</inlineHelpText>
    <label>Authorized Payment</label>
    <type>Checkbox</type>
</CustomField>