force-app/main/default/objects/Opportunity/fields/Auto_Respond_After_Two_Day__c.field-meta.xml
<CustomField>
    <fullName>Auto_Respond_After_Two_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Respond After Two Day</label>
    <type>Checkbox</type>
</CustomField>