force-app/main/default/objects/Opportunity/fields/Baby_is_born__c.field-meta.xml
<CustomField>
    <fullName>Baby_is_born__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When &apos;Baby is born&apos; is checked, Opportunity is updated. This was created for 3/2020 email to &apos;enrolled but not born yet&apos; re: coronavirus.</description>
    <label>Baby is born</label>
    <type>Checkbox</type>
</CustomField>