force-app/main/default/objects/Opportunity/fields/Baby_s_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Baby_s_Due_Date__c</fullName>
    <label>Baby&apos;s Due Date</label>
    <type>Date</type>
</CustomField>