force-app/main/default/objects/Opportunity/fields/BANT_Score__c.field-meta.xml
<CustomField>
    <fullName>BANT_Score__c</fullName>
    <formula>Budget_What_is_the_client_s_budget__c +  Authority_is_client_the_decision_maker__c +  Need_what_is_clients_level_of_need__c + Timeframe_How_soon_will_client_decide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BANT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>