force-app/main/default/objects/Opportunity/fields/BDD_Text__c.field-meta.xml
<CustomField>
    <fullName>BDD_Text__c</fullName>
    <description>Created for Xant&apos;s Sort, which currently does not work with date fields.</description>
    <formula>IF (Baby_s_Due_Date__c &lt; Today()+30, 30,
IF ( Baby_s_Due_Date__c &lt; Today()+60, 60,
IF ( Baby_s_Due_Date__c &lt; Today()+90, 90,
IF ( Baby_s_Due_Date__c &lt; Today()+120, 120,
null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDD Text</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>