force-app/main/default/objects/Opportunity/fields/Biobanking_Multi_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Biobanking_Multi_Product_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>When customers purchase multiple bio-banking products, special pricing is applied.  This is only applied when the Biobanking products are selected outside of a defined bundle.</description>
    <inlineHelpText>When customers purchase multiple bio-banking products, special pricing is applied.  This is only applied when the Biobanking products are selected outside of a defined bundle.</inlineHelpText>
    <label>Biobanking Multi-Product Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>