force-app/main/default/objects/Opportunity/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <description>This is the birth date for the baby. This value is populated by the RecordTrigger:Lab After Insert or Update flow.</description>
    <inlineHelpText>This is the birth date for the baby. This value is populated by the RecordTrigger:Lab After Insert or Update flow.</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>