force-app/main/default/objects/Opportunity/fields/Birth_Plan_Choices__c.field-meta.xml
<CustomField>
    <fullName>Birth_Plan_Choices__c</fullName>
    <label>Birth Plan Choices</label>
    <length>100</length>
    <type>Text</type>
</CustomField>