force-app/main/default/objects/Opportunity/fields/Blood_Donation__c.field-meta.xml
<CustomField>
    <fullName>Blood_Donation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will flag clients who have opted in on blood donation.This field value is automatically set based on the selection of a donation product.</description>
    <inlineHelpText>This field will flag clients who have opted in on blood donation.This field value is automatically set based on the selection of a donation product.</inlineHelpText>
    <label>Blood Donation</label>
    <type>Checkbox</type>
</CustomField>