force-app/main/default/objects/Opportunity/fields/Booking_Rep__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rep__c</fullName>
    <label>Booking Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maria Cabus</fullName>
            </value>
            <value>
                <fullName>Charity Mae dela Cruz</fullName>
            </value>
            <value>
                <fullName>Cynthia Chang</fullName>
            </value>
            <value>
                <fullName>Eric Brown</fullName>
            </value>
            <value>
                <fullName>Joane Gojol</fullName>
                <isActive>false</isActive>
                <label>Joane Gojol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>