force-app/main/default/objects/Opportunity/fields/Budget_What_is_the_client_s_budget__c.field-meta.xml
<CustomField>
    <fullName>Budget_What_is_the_client_s_budget__c</fullName>
    <inlineHelpText>1 is small budget, 5 is high budget or enter something in between.</inlineHelpText>
    <label>BUDGET: What is the client&apos;s budget?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>