force-app/main/default/objects/Opportunity/fields/Bundle_Savings_Total__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Savings_Total__c</fullName>
    <description>This is the total for the bundle savings for all Opportunity Line Items.</description>
    <inlineHelpText>This is the total for the bundle savings for all Opportunity Line Items.</inlineHelpText>
    <label>Bundle Savings Total</label>
    <summarizedField>OpportunityLineItem.Bundle_Savings__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>