force-app/main/default/objects/Opportunity/fields/CA_Delay__c.field-meta.xml
<CustomField>
    <fullName>CA_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for when the customer flags that it&apos;s been a long time since they filled out the CA matching tool, we&apos;re trying to determine if there&apos;s a lag in between form fill &amp; lead receipt here.</description>
    <inlineHelpText>This is for when the customer flags that it&apos;s been a long time since they filled out the CA matching tool, we&apos;re trying to determine if there&apos;s a lag in between form fill &amp; lead receipt here.</inlineHelpText>
    <label>CA Delay</label>
    <type>Checkbox</type>
</CustomField>