force-app/main/default/objects/Opportunity/fields/CA_Double_Dip__c.field-meta.xml
<CustomField>
    <fullName>CA_Double_Dip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for when the lead has already enrolled with a competitor/they already matched with a different cord blood bank with the CA matching tool. We&apos;re trying to determine if CA is selling the same leads to multiple vendors here</description>
    <inlineHelpText>This is for when the lead has already enrolled with a competitor/they already matched with a different cord blood bank with the CA matching tool. We&apos;re trying to determine if CA is selling the same leads to multiple vendors here</inlineHelpText>
    <label>CA Double-Dip</label>
    <type>Checkbox</type>
</CustomField>