force-app/main/default/objects/Opportunity/fields/Calendly__c.field-meta.xml
<CustomField>
    <fullName>Calendly__c</fullName>
    <label>Calendly</label>
    <type>Date</type>
</CustomField>