force-app/main/default/objects/Opportunity/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <description>Fastcall Call Count</description>
    <label>Call Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>