force-app/main/default/objects/Opportunity/fields/Call_Count_Internal__c.field-meta.xml
<CustomField>
    <fullName>Call_Count_Internal__c</fullName>
    <description>Fastcall Internal Call Count</description>
    <label>Call Count Internal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>