force-app/main/default/objects/Opportunity/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCW#</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
            <value>
                <fullName>Asked to not be called</fullName>
            </value>
            <value>
                <fullName>Prefers Email</fullName>
            </value>
            <value>
                <fullName>SMS Only - Coreg</fullName>
            </value>
            <value>
                <fullName>Can&apos;t afford</fullName>
                <isActive>false</isActive>
                <label>Can&apos;t afford</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Hung up</fullName>
                <isActive>false</isActive>
                <label>Hung up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>