force-app/main/default/objects/Opportunity/fields/Campaign_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Cookie__c</fullName>
    <formula>Contact__r.Campaign_Cookie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign (Cookie)</label>
    <type>Text</type>
</CustomField>