force-app/main/default/objects/Opportunity/fields/Campaign_FT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_FT__c</fullName>
    <formula>Contact__r.Campaign_FT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign (FT)</label>
    <type>Text</type>
</CustomField>