force-app/main/default/objects/Opportunity/fields/Campaign_LT__c.field-meta.xml
<CustomField>
    <fullName>Campaign_LT__c</fullName>
    <formula>Contact__r.Campaign_LT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign (LT)</label>
    <type>Text</type>
</CustomField>