force-app/main/default/objects/Opportunity/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Order is canceled, Opportunity &apos;canceled&apos; is updated via Process Builder</description>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>