force-app/main/default/objects/Opportunity/fields/Change_Owner_to_Americord__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_to_Americord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Owner to Americord</label>
    <type>Checkbox</type>
</CustomField>