force-app/main/default/objects/Opportunity/fields/Close_Date_is_Wrong__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_is_Wrong__c</fullName>
    <description>Used to trigger nightly flow to fix close date.</description>
    <formula>IF ( 
AND (
 IsClosed = false,
   OR (
      AND(
        ISBLANK( Baby_s_Due_Date__c ),
        CloseDate !=  (DATEVALUE(CreatedDate)+280)),
      CloseDate !=  Baby_s_Due_Date__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date is Wrong</label>
    <type>Checkbox</type>
</CustomField>