force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reasons__c</fullName>
    <label>Closed Lost Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baby Came Early</fullName>
            </value>
            <value>
                <fullName>Birth Plan Only</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Alphacord</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - CBR</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Cryocell</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Evercord</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - FamilyCord</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Lifebank</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Maze</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - None given</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - StemCyte</fullName>
            </value>
            <value>
                <fullName>Chose Competitor - Viacord</fullName>
            </value>
            <value>
                <fullName>Decided not to bank</fullName>
            </value>
            <value>
                <fullName>Delayed clamping</fullName>
            </value>
            <value>
                <fullName>Don&apos;t think they will need stem cells</fullName>
            </value>
            <value>
                <fullName>Donating</fullName>
            </value>
            <value>
                <fullName>Medical Reasons</fullName>
            </value>
            <value>
                <fullName>Miscarried</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
            <value>
                <fullName>Not Interested - Bad Experience</fullName>
            </value>
            <value>
                <fullName>Not Interested - Banking</fullName>
            </value>
            <value>
                <fullName>Not Interested - Cannot Afford</fullName>
            </value>
            <value>
                <fullName>Not Interested - Changed Mind</fullName>
            </value>
            <value>
                <fullName>Not Interested - No Reason Given / Hung up</fullName>
            </value>
            <value>
                <fullName>Not Interested - Not worth the price</fullName>
            </value>
            <value>
                <fullName>Not Interested - Placenta Encapsulation Only</fullName>
            </value>
            <value>
                <fullName>Not Interested - Spouse decision</fullName>
            </value>
            <value>
                <fullName>Not Interested - Sweepstakes</fullName>
            </value>
            <value>
                <fullName>Not Interested - Bad Number/Blocked</fullName>
            </value>
            <value>
                <fullName>Not Pregnant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>