force-app/main/default/objects/Opportunity/fields/Combined_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Combined_Email_Address__c</fullName>
    <description>Used by Duplicate Check to dedupe Opportunities</description>
    <formula>Email__c+&quot; &quot;+Contact2_Email__c+&quot; &quot;+ Alt_Email_Address__c</formula>
    <label>Combined Email Address</label>
    <type>Text</type>
</CustomField>