force-app/main/default/objects/Opportunity/fields/Combined_Phone__c.field-meta.xml
<CustomField>
    <fullName>Combined_Phone__c</fullName>
    <description>Used by Duplicate Check to dedupe Opportunities</description>
    <formula>Phone__c +&quot; &quot;+ Contact2_Phone__c</formula>
    <label>Combined Phone</label>
    <type>Text</type>
</CustomField>