force-app/main/default/objects/Opportunity/fields/Compare_Count_to_Lines__c.field-meta.xml
<CustomField>
    <fullName>Compare_Count_to_Lines__c</fullName>
    <formula>(Cord_Blood_2_0__c +  Cord_Tissue__c +  Placenta_2_0__c ) -  Number_of_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Count to Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>