force-app/main/default/objects/Opportunity/fields/Confirm_info_is_appropriate_for_LABEL__c.field-meta.xml
<CustomField>
    <fullName>Confirm_info_is_appropriate_for_LABEL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Your label info will appear on the label used for shipping. Confirm that your text is appropriate for public display.</inlineHelpText>
    <label>Confirm info is appropriate for LABEL</label>
    <type>Checkbox</type>
</CustomField>