force-app/main/default/objects/Opportunity/fields/Considering_Lifetime_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Considering_Lifetime_Upgrade__c</fullName>
    <label>Considering Lifetime Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Considering_Lifetime_Upgrade</valueSetName>
    </valueSet>
</CustomField>