force-app/main/default/objects/Opportunity/fields/Consumer_Affairs_UUID__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Affairs_UUID__c</fullName>
    <description>Unique identifier for leads from Consumer Affairs.This field is mapped over from marketing/hubspot.</description>
    <inlineHelpText>Unique identifier for leads from Consumer Affairs.</inlineHelpText>
    <label>Consumer Affairs UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>