force-app/main/default/objects/Opportunity/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>