force-app/main/default/objects/Opportunity/fields/Contact2_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Email__c</fullName>
    <label>Contact2 Email</label>
    <type>Email</type>
</CustomField>