force-app/main/default/objects/Opportunity/fields/Contact2_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Email_Opt_Out__c</fullName>
    <formula>Contact2__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact2 Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>