force-app/main/default/objects/Opportunity/fields/Contact2_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact2_FirstName__c</fullName>
    <label>Contact2 First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>