force-app/main/default/objects/Opportunity/fields/Contact2_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact2_LastName__c</fullName>
    <label>Contact2 Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>