force-app/main/default/objects/Opportunity/fields/Contact2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Phone__c</fullName>
    <label>Contact2 Phone</label>
    <type>Phone</type>
</CustomField>