force-app/main/default/objects/Opportunity/fields/Contact2_Relation_to_Baby__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Relation_to_Baby__c</fullName>
    <label>Contact2 Relation to Baby</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>