force-app/main/default/objects/Opportunity/fields/Contact_2_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_ID__c</fullName>
    <description>Used to created Contact Roles for Contacts created before 3/18/2020. This process is now automated.</description>
    <formula>Contact2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact 2 ID</label>
    <type>Text</type>
</CustomField>